# pomoduro-clock

./: Cargo.toml
src/: console.rs  main.rs
ui/: hello.slint
