[package]
name = "pomoduro_clock"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sound playing
rodio = "0.17"

# Argument parsing
clap = { version = "4.2", features = ["derive"] }

# Config file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI
slint = { version = "1.0.0" }

[build-dependencies]
slint-build = { version = "1.0.0" }
